--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/dzuqe/tos#readme",
   "devDependencies": {
     "rollup": "^2.52.2",
+    "sass": "^1.35.1",
     "typescript": "^4.3.4"
   }
 }
