--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "rollup": "^2.52.2",
     "sass": "^1.35.1",
     "typescript": "^4.3.4"
+  },
+  "dependencies": {
+    "near-api-js": "^0.41.0"
   }
 }
