--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
   },
   "homepage": "https://github.com/dzuqe/tos#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "rollup": "^2.52.2",
     "sass": "^1.35.1",
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "near-api-js": "^0.41.0"
   }
 }
