--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "rollup": "^2.52.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "sass": "^1.35.1",
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "buffer": "^6.0.3",
     "near-api-js": "^0.41.0"
   }
